objects/Rate_Sheet_Line__c/Rate_Sheet_Line__c.object-meta.xml
<CustomObject>
    <label>Rate Sheet Line</label>
    <nameField>
        <displayFormat>RSL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Sheet Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>