objects/Rate_Sheet_Line__c/fields/ER_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>ER_Unit_Price__c</fullName>
    <label>ER Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>