objects/Rate_Sheet_Line__c/fields/Rate_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Rate_Sheet__c</fullName>
    <label>Rate Sheet</label>
    <referenceTo>Rate_Sheet__c</referenceTo>
    <relationshipLabel>Rate Sheet Lines</relationshipLabel>
    <relationshipName>Rate_Sheet_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>