objects/Rate_Sheet_Line__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit_of_Measure__c.Blocked__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Rate Sheet Lines (Unit of Measure)</relationshipLabel>
    <relationshipName>Rate_Sheet_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>