objects/Rate_Sheet_Line__c/recordTypes/Resource.recordType-meta.xml
<RecordType>
    <fullName>Resource</fullName>
    <active>true</active>
    <label>Resource</label>
</RecordType>