objects/Rate_Sheet_Line__c/recordTypes/Resource_Type.recordType-meta.xml
<RecordType>
    <fullName>Resource_Type</fullName>
    <active>true</active>
    <label>Resource Type</label>
</RecordType>